# pykabu-calendar

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
api/: index.html
docs/: api.md  architecture.md  index.md
docs/dev/: sbi-api.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli.md  configuration.md  custom-sources.md  official-ir.md  sources.md
examples/: quickstart.ipynb
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/configuration/: index.html
guide/official-ir/: index.html
guide/sources/: index.html
search/: search_index.json
src/pykabu_calendar/: __init__.py  calendar.py  cli.py  config.py  config.yaml  inference.py
src/pykabu_calendar/core/: __init__.py  fetch.py  io.py  parallel.py  parse.py
src/pykabu_calendar/earnings/: __init__.py  base.py  calendar.py  inference.py
src/pykabu_calendar/earnings/ir/: __init__.py  cache.py  discovery.py  parser.py  patterns.py
src/pykabu_calendar/earnings/sources/: __init__.py  matsui.py  matsui.yaml  sbi.py  sbi.yaml  tradersweb.py  tradersweb.yaml
src/pykabu_calendar/inference/: __init__.py  historical.py
src/pykabu_calendar/ir/: __init__.py  cache.py  discovery.py  parser.py
src/pykabu_calendar/llm/: __init__.py  base.py  gemini.py
src/pykabu_calendar/official/: __init__.py
src/pykabu_calendar/scrapers/: __init__.py  config.py  matsui.py  sbi.py  tradersweb.py
src/pykabu_calendar/sources/: __init__.py  base.py  matsui.py  sbi.py  tradersweb.py
src/pykabu_calendar/sources/matsui/: __init__.py  config.py  scraper.py
src/pykabu_calendar/sources/sbi/: __init__.py  config.py  scraper.py
src/pykabu_calendar/sources/tradersweb/: __init__.py  config.py  scraper.py
src/pykabu_calendar/utils/: __init__.py  export.py
tasks/done/: TASK-001-project-setup.md  TASK-002-base-scraper.md  TASK-003-sbi-scraper.md  TASK-004-matsui-scraper.md  TASK-006-tradersweb-scraper.md  TASK-007-calendar-merger.md  TASK-008-historical-inference.md  TASK-014-csv-export.md  TASK-015-main-api.md  TASK-017-tests.md  TASK-018-documentation.md  TASK-020-llm-base.md  TASK-021-ir-patterns.md  TASK-022-ir-discovery.md  TASK-023-ir-parser.md  TASK-024-ir-cache.md  TASK-025-ir-integration.md
tasks/todo/: TASK-005-monex-scraper.md  TASK-009-ir-patterns.md  TASK-010-ir-finder.md  TASK-011-ir-parser.md  TASK-012-llm-interface.md  TASK-013-cache-system.md  TASK-016-configuration.md  TASK-020-llm-base.md  TASK-021-ir-patterns.md  TASK-022-ir-discovery.md  TASK-023-ir-parser.md  TASK-024-ir-cache.md  TASK-025-ir-integration.md
tests/: __init__.py  conftest.py  test_base.py  test_calendar.py  test_calendar_unit.py  test_cli.py  test_config.py  test_core_fetch.py  test_core_parse.py  test_inference.py  test_io.py  test_ir_cache.py  test_ir_discovery.py  test_ir_parser.py  test_ir_patterns.py  test_llm.py  test_parallel.py  test_sbi_internals.py  test_scrapers.py  test_sources.py
